--- a/style.css
+++ b/style.css
@@ -138,10 +138,15 @@ h3 {
   order: 1;
 }
 
+.imagem-direita, .imagem-esquerda {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .imagem-direita p, .imagem-esquerda p {
   font-size: small;
   color: #505050;
-  text-align: center;
 }
 
 .conteudo-imagem {
@@ -384,7 +389,7 @@ button:hover {
 #voltar-topo {
   background-color: rgb(58, 58, 58);
   border-radius: 20%;
-  border: 2px solid rgb(6.7, 6.7, 6.7);
+  border: 2px solid rgb(6.7, 6.7, 6.7, .6);
   position: fixed;
   bottom: 15px;
   right: 15px;
@@ -439,3 +444,13 @@ button:hover {
     border-radius: 8px;
   }
 }
+
+dl dd img {
+  transition: transform 0.3s ease;
+}
+
+dl dd img:hover {
+  transform: scale(1.02);
+}
+
+
